# connected-spaces-platform-unity

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-android.yml  build-desktop-unity.yml  build-desktop.yml  build-ios.yml  build.yml  run-unity-tests-macos.yml  run-unity-tests.yml  test-no-export-stripping.yml
ConnectedSpacesPlatform_Unity_Nuget/: ConnectedSpacesPlatform_Unity_Nuget.csproj  README.md
Doc/: Implementor-Guide.md
InteropTestsXUnit/: ArrayTests.cs  CallbackTests.cs  EnumTests.cs  InteropTestsXUnit.csproj  ListTests.cs  MapTests.cs  OperatorsTest.cs  OptionalTest.cs  PropertiesTests.cs  StaticTests.cs  UnitTest1.cs  ValueEquatableTest.cs
UnityProject/: ConnectedSpacesPlatform.Unity.Core.asmdef
UnityProject/CspUnityTests/Assets/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/CspUnityTests/Assets/Scripts/: CspUnityTests.asmdef
UnityProject/CspUnityTests/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
Utilities/: GenInterfaceFiles.py
Utilities/StripNoExport/: .gitignore  README.md  StripNoExport.py  test_StripNoExport.py
Utilities/StripNoExport/TestDataExpected/: CSPFoundation.h
Utilities/StripNoExport/TestDataExpected/Common/: List.h  ReplicatedValue.h
Utilities/StripNoExport/TestDataExpected/Multiplayer/: OnlineRealtimeEngine.h
Utilities/StripNoExport/TestDataInput/Multiplayer/: OnlineRealtimeEngine.h
cmake/: CopyToUnity.cmake  GetCSP.cmake  GetSwig.cmake  Options.cmake  PackageInstall.cmake
extra/cs/Exceptions/: FoundationEndpointException.cs  FoundationException.cs
interface/: main.i
interface/CSP/: AssetHash.i  CSPCommon.i  CSPFoundation.i  version.i
interface/CSP/Common/: CSPAsyncScheduler.i  CancellationToken.i  Hash.i  LoginState.i  MimeTypeHelper.i  NetworkEventData.i  ReplicatedValue.i  Settings.i  SharedConstants.i  SharedEnums.i  Vector.i
interface/CSP/Common/Interfaces/: IAuthContext.i  IJSScriptRunner.i  IRealtimeEngine.i  IScriptBinding.i  InvalidInterfaceUserError.i
interface/CSP/Multiplayer/: CSPSceneDescription.i  ComponentBase.i  MultiPlayerConnection.i  NetworkEventBus.i  OfflineRealtimeEngine.i  OnlineRealtimeEngine.i  PatchTypes.i  SpaceEntity.i  SpaceTransform.i
interface/CSP/Multiplayer/Components/: AIChatbotComponent.i  AnimatedModelSpaceComponent.i  AudioSpaceComponent.i  AvatarSpaceComponent.i  BillBoardModeEnum.i  ButtonSpaceComponent.i  CinematicCameraSpaceComponent.i  CollisionSpaceComponent.i  ConversationSpaceComponent.i  CustomSpaceComponent.i  ECommerceSpaceComponent.i  ExternalLinkSpaceComponent.i  FiducialMarkerSpaceComponent.i  (+13 more)
interface/CSP/Systems/: CSPSceneData.i  ServiceStatus.i  SystemBase.i  SystemsManager.i  SystemsResult.i  WebService.i
interface/Systems/: SystemBase.i
interface/Systems/Maintenance/: Maintenance.i
interface/swigutils/: AsyncAdapters.i  CallbackAdapters.i  Equatable.i  GeneralUtils.i  MacroZapper.i  Operators.i  OptionalDeclarations.i  TemplateDeclarations.i
interface/swigutils/typemaps/: Csp_Array.i  Csp_List.i  Csp_Map.i  Csp_Optional.i  Csp_String.i
(+65 files in other folders)
